Jenkins: increase heap space for JVM